# core-sync-rs

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: INTEGRATION.md  LIVE_DEMO.md  ROADMAP.md  WSL_LIVE_DEMO.md
examples/: diff_two_files.rs  live_sync.rs  register_app_key.rs  sia_live_demo.rs  sync_pipeline.rs
scripts/: approve_connection.sh  register_and_approve.sh
src/: chunker.rs  error.rs  indexd.rs  indexd_live.rs  indexd_real.rs  lib.rs  manifest.rs  payload.rs  pipeline.rs  sia.rs  sia_live.rs  sia_real.rs  sia_sdk.rs  sync_engine.rs
tests/: sync_integration.rs
